[package]
name = "monkey"
version = "0.1.0"
authors = ["Jahred Love <me@jah.red>"]
edition = "2018"

[dependencies]
rustyline = { version = "1.0.0", optional = true }
once_cell = "1.19"

[[bin]]
name = "monkey"
path = "src/bin/main.rs"
required-features = ["binaries"]

[features]
binaries = ["rustyline"]